--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,6 @@
     - "flake8 downstream_farmer/"
     - "nosetests -v --with-coverage --cover-package=downstream_farmer -cover-branches --cover-min-percentage=90 tests/"
     - "downstream --verify-ownership tests/thirty-two_meg.testfile 'http://localhost:5000'"
+
+  notifications:
+    slack: storj:IwoHonDxA5lauvwcKZRMkfps
