--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 requests
-git+https://github.com/Storj/heartbeat.git@v0.1.2
+
+-e git+https://github.com/Storj/heartbeat.git@v0.1.2==storj-heartbeat
