--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 requests
 
--e git+https://github.com/Storj/heartbeat.git@v0.1.2==storj-heartbeat
+-e git+https://github.com/Storj/heartbeat.git@v0.1.2#egg=storj-heartbeat
