--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@
 
   install:
     - "pip install flake8 coverage coveralls"
-    - "pip install --process-dependency-links ."
+    - "pip install -r requirements.txt"
     - "git clone https://github.com/Storj/downstream-node.git node"
     - "cd node; pip install .; cd .."
 
