--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@
     - "nosetests -v --with-coverage --cover-package=downstream_farmer -cover-branches --cover-min-percentage=90 tests/"
     - "downstream --verify-ownership tests/thirty-two_meg.testfile 'http://localhost:5000'"
 
-  notifications:
-    slack: storj:IwoHonDxA5lauvwcKZRMkfps
+#  notifications:
+#    slack: storj:IwoHonDxA5lauvwcKZRMkfps
