added libcrypto prerequisite

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,13 @@
   services:
     - mysql
 
+  before_install:
+    - sudo apt-get install libcrypto++-dev
+    
   install:
     - "pip install flake8 coverage coveralls"
     - "pip install -r requirements.txt ."
-    - "git clone https://github.com/Storj/downstream-node.git node"
+    - "git clone https://github.com/wiggzz/downstream-node/tree/devel node"
     - "cd node; pip install -r requirements.txt .; cd .."
 
   before_script:
