--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@
   install:
     - "pip install flake8 coverage coveralls"
     - "pip install -r requirements.txt ."
-    - "git clone -b devel https://github.com/wiggzz/downstream-node.git"
+    - "git clone -b devel https://github.com/wiggzz/downstream-node.git node"
     - "cd node; pip install -r requirements.txt .; cd .."
 
   before_script:
