--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@
     - "flake8 downstream_farmer/"
     - "nosetests -v --with-coverage --cover-package=downstream_farmer tests/"
     - "downstream 'http://localhost:5000'"
-    - top nohup.out
+    - cat nohup.out
 
 #  notifications:
 #    slack: storj:IwoHonDxA5lauvwcKZRMkfps
