running storj downstream-node now

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 requests
 
 -e git+https://github.com/Storj/heartbeat.git#egg=storj-heartbeat
+-e git+https://github.com/Storj/RandomIO.git#egg=RandomIO
