modified test run to use 10 challenges

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@
   script:
     - "flake8 downstream_farmer/"
     - "nosetests -v --with-coverage --cover-package=downstream_farmer tests/"
-    - "downstream 'http://localhost:5000'"
+    - "downstream -n 10 'http://localhost:5000'"
 
 #  notifications:
 #    slack: storj:IwoHonDxA5lauvwcKZRMkfps
