added base58 requirement.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 requests
+base58
 
--e git+https://github.com/Storj/heartbeat.git#egg=storj-heartbeat
--e git+https://github.com/Storj/RandomIO.git#egg=RandomIO
+git+https://github.com/Storj/heartbeat.git#egg=storj-heartbeat
+git+https://github.com/Storj/RandomIO.git#egg=RandomIO
