turned notifications back on

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@
     - "nosetests -v --with-coverage --cover-package=downstream_farmer tests/"
     - "downstream -n 2 'http://localhost:5000'"
 
-#  notifications:
-#    slack: storj:IwoHonDxA5lauvwcKZRMkfps
+  notifications:
+    slack: storj:IwoHonDxA5lauvwcKZRMkfps
