--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@
     - "curl -o GeoLite2-City.mmdb.gz http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz"
     - "gunzip GeoLite2-City.mmdb.gz"
     - "cd .."
-    - "cd node; python runapp.py --initdb ; nohup python runapp.py & >/dev/null; cd .."
+    - "cd node; python runapp.py --initdb ; nohup python runapp.py & >out.txt; cd .."
   
   after_success:
     - coveralls
@@ -36,6 +36,7 @@
     - "flake8 downstream_farmer/"
     - "nosetests -v --with-coverage --cover-package=downstream_farmer tests/"
     - "downstream -n 2 -a 179P2swc7dpqNw3rF6rZ8suc5PtP1H2JCw 'http://localhost:5000'"
+    - cat node/out.txt
 
   notifications:
     slack: storj:IwoHonDxA5lauvwcKZRMkfps
