--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,16 @@
     - "mkdir data && cd data"
     - "curl -o GeoLite2-City.mmdb.gz http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz"
     - "gunzip GeoLite2-City.mmdb.gz"
-    - "cd ../.."
+    - "cd .."
 
   before_script:
     - 'mysql -e "create database if not exists downstream;" -u root'
-    - "cd node; python runapp.py --initdb ; nohup python runapp.py & >/dev/null ; cd .."
+    - "cd node"
+    - "python runapp.py --initdb"
+    - "git clone https://github.com/storj/whitelist.git data/whitelist"
+    - "python runapp.py --whitelist data/whitelist/storj_crowdfunding_by_amount.txt"
+    - "nohup python runapp.py & >/dev/null"
+    - "cd .."
   
   after_success:
     - coveralls
