--- a/.travis.yml
+++ b/.travis.yml
@@ -22,13 +22,13 @@
     - "mkdir data && cd data"
     - "curl -o GeoLite2-City.mmdb.gz http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz"
     - "gunzip GeoLite2-City.mmdb.gz"
+    - "git clone https://github.com/storj/whitelist.git whitelist"
     - "cd ../.."
 
   before_script:
     - 'mysql -e "create database if not exists downstream;" -u root'
     - "cd node"
     - "python runapp.py --initdb"
-    - "git clone https://github.com/storj/whitelist.git data/whitelist"
     - "python runapp.py --whitelist data/whitelist/storj_crowdfunding_by_amount.txt"
     - "nohup python runapp.py & >/dev/null"
     - "cd .."
@@ -40,7 +40,7 @@
   script:
     - "flake8 downstream_farmer/"
     - "nosetests -v --with-coverage --cover-package=downstream_farmer tests/"
-    - "downstream -n 2 -a 179P2swc7dpqNw3rF6rZ8suc5PtP1H2JCw 'http://localhost:5000'"
+    - "downstream -n 2 -a 1JHz9EDWHXH5oM146QrW8x1mgeyQdmJTcf 'http://localhost:5000'"
 
   notifications:
     slack: storj:IwoHonDxA5lauvwcKZRMkfps
