--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@
     - sudo apt-get install libcrypto++-dev
     
   install:
-    - "pip install flake8 coverage coveralls py2exe"
+    - "pip install flake8 coverage coveralls"
     - "pip install -r requirements.txt ."
     - "git clone -b devel https://github.com/storj/downstream-node.git node"
     - "cd node ; pip install -r requirements.txt ."
