another quote fix.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@
     - "cd node"
     - "python runapp.py --initdb"
     - "python runapp.py --whitelist data/whitelist/storj_crowdfunding_by_amount.txt"
-    - 'mysql -e "use downstream; insert into addresses (address, crowdsale_balance) values (`19qVgG8C6eXwKMMyvVegsi3xCsKyk3Z3jV`,10000);" -u root'
+    - 'mysql -e "use downstream; insert into addresses (address, crowdsale_balance) values (''19qVgG8C6eXwKMMyvVegsi3xCsKyk3Z3jV'',10000);" -u root'
     - "nohup python runapp.py & >/dev/null"
     - "cd .."
   
