--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@
     
   install:
     - "pip install flake8 coverage coveralls"
-    - "pip install -r requirements.txt"
+    - "pip install -r requirements.txt ."
     - "git clone -b devel https://github.com/storj/downstream-node.git node"
     - "cd node ; pip install -r requirements.txt ."
     - "mkdir data && cd data"
