fixed readme and now pulling from master branch in storj/downstream-node

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@
   install:
     - "pip install flake8 coverage coveralls"
     - "pip install -r requirements.txt ."
-    - "git clone -b devel https://github.com/storj/downstream-node.git node"
+    - "git clone https://github.com/storj/downstream-node.git node"
     - "cd node ; pip install -r requirements.txt ."
     - "mkdir data && cd data"
     - "curl -o GeoLite2-City.mmdb.gz http://geolite.maxmind.com/download/geoip/database/GeoLite2-City.mmdb.gz"
